--- a/package.json
+++ b/package.json
@@ -14,11 +14,11 @@
     "bootstrap": "^5.2.3",
     "framer-motion": "^9.0.4",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.7.2",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.8.1",
     "react-scripts": "5.0.1",
-    "reactstrap": "^9.1.5",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
